--- a/ViewandHire/test-output/old/Default suite/methods.html
+++ b/ViewandHire/test-output/old/Default suite/methods.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b9e78c">  <td>22/11/05 18:27:55</td>   <td>0</td> <td title="&lt;&lt;CommonFunctions.tearDown()[pri:0, instance:testCase.Setting_tc@13e344d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>22/11/05 18:27:32</td>   <td>-22277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Skills()[pri:3, instance:testCase.Setting_tc@13e344d]">Skills</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>22/11/05 18:27:37</td>   <td>-17245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.QuestionsBank()[pri:4, instance:testCase.Setting_tc@13e344d]">QuestionsBank</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="b9e78c">  <td>22/11/05 18:26:39</td>   <td>-75434</td> <td title="&gt;&gt;CommonFunctions.launchBrowser()[pri:0, instance:testCase.Setting_tc@13e344d]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>22/11/05 18:27:19</td>   <td>-35625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.OrganizationRegister()[pri:1, instance:testCase.Setting_tc@13e344d]">OrganizationRegister</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>22/11/05 18:27:27</td>   <td>-27605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.JobCategoryRegister()[pri:2, instance:testCase.Setting_tc@13e344d]">JobCategoryRegister</td> 
-  <td>main@867988177</td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>22/11/05 18:27:46</td>   <td>-8412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Users()[pri:5, instance:testCase.Setting_tc@13e344d]">Users</td> 
-  <td>main@867988177</td>   <td></td> </tr>
+<tr bgcolor="caa560">  <td>22/11/13 21:15:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_tc.loginPage()[pri:0, instance:testCase.Login_tc@3c77d488]">loginPage</td> 
+  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="76738a">  <td>22/11/13 21:15:03</td>   <td>-32276</td> <td title="&gt;&gt;CommonFunctions.launchBrowser()[pri:0, instance:testCase.Login_tc@3c77d488]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="76738a">  <td>22/11/13 21:15:37</td>   <td>1421</td> <td title="&lt;&lt;CommonFunctions.tearDown()[pri:0, instance:testCase.Login_tc@3c77d488]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
 </table>
