--- a/ViewandHire/test-output/old/ViewandHireProject/methods-alphabetical.html
+++ b/ViewandHire/test-output/old/ViewandHireProject/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>ViewandHireProject</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9d798">  <td>22/11/05 18:41:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.JobCategoryRegister()[pri:2, instance:testCase.Setting_tc@7bba5817]">JobCategoryRegister</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="a9d798">  <td>22/11/05 18:41:33</td>   <td>-6270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.OrganizationRegister()[pri:1, instance:testCase.Setting_tc@7bba5817]">OrganizationRegister</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="a9d798">  <td>22/11/05 18:41:50</td>   <td>10518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.QuestionsBank()[pri:4, instance:testCase.Setting_tc@7bba5817]">QuestionsBank</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="a9d798">  <td>22/11/05 18:41:45</td>   <td>5683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Skills()[pri:3, instance:testCase.Setting_tc@7bba5817]">Skills</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="a9d798">  <td>22/11/05 18:41:59</td>   <td>19009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Users()[pri:5, instance:testCase.Setting_tc@7bba5817]">Users</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="b5dd6c">  <td>22/11/05 18:39:16</td>   <td>-144029</td> <td title="&gt;&gt;CommonFunctions.launchBrowser()[pri:0, instance:testCase.Setting_tc@7bba5817]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="836cb8">  <td>22/11/05 18:39:46</td>   <td>-113491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_tc.loginPage()[pri:0, instance:testCase.Login_tc@6e9175d8]">loginPage</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>22/11/05 18:40:42</td>   <td>-57583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Candidate_tc.registercandidate()[pri:0, instance:testCase.Candidate_tc@1ca3b418]">registercandidate</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="9f98c4">  <td>22/11/05 18:39:47</td>   <td>-112726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="job_tc.registerjob()[pri:0, instance:testCase.job_tc@54422e18]">registerjob</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="61d8d1">  <td>22/11/05 18:41:19</td>   <td>-20506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Schedule_tc.scheduleinterview()[pri:0, instance:testCase.Schedule_tc@1cf6d1be]">scheduleinterview</td> 
-  <td>main@138817329</td>   <td></td> </tr>
-<tr bgcolor="b5dd6c">  <td>22/11/05 18:42:02</td>   <td>22331</td> <td title="&lt;&lt;CommonFunctions.tearDown()[pri:0, instance:testCase.Setting_tc@7bba5817]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@138817329</td>   <td></td> </tr>
+<tr bgcolor="60d6e9">  <td>23/01/04 09:01:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.JobCategoryRegister()[pri:2, instance:testCase.Setting_tc@2d901eb0]">JobCategoryRegister</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="60d6e9">  <td>23/01/04 09:01:41</td>   <td>-6552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.OrganizationRegister()[pri:1, instance:testCase.Setting_tc@2d901eb0]">OrganizationRegister</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="60d6e9">  <td>23/01/04 09:01:58</td>   <td>10284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.QuestionsBank()[pri:4, instance:testCase.Setting_tc@2d901eb0]">QuestionsBank</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="60d6e9">  <td>23/01/04 09:01:53</td>   <td>5427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Skills()[pri:3, instance:testCase.Setting_tc@2d901eb0]">Skills</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="60d6e9">  <td>23/01/04 09:02:07</td>   <td>19079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Users()[pri:5, instance:testCase.Setting_tc@2d901eb0]">Users</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="e495ff">  <td>23/01/04 08:59:16</td>   <td>-152008</td> <td title="&gt;&gt;CommonFunctions.launchBrowser()[pri:0, instance:testCase.Setting_tc@2d901eb0]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="fc868b">  <td>23/01/04 08:59:54</td>   <td>-114321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_tc.loginPage()[pri:0, instance:testCase.Login_tc@5d0bf09b]">loginPage</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="8d708a">  <td>23/01/04 09:00:50</td>   <td>-57711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Candidate_tc.registercandidate()[pri:0, instance:testCase.Candidate_tc@53fb3dab]">registercandidate</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="e4659c">  <td>23/01/04 08:59:59</td>   <td>-108488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="job_tc.registerjob()[pri:0, instance:testCase.job_tc@53045c6c]">registerjob</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="8ff096">  <td>23/01/04 09:01:26</td>   <td>-21969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Schedule_tc.scheduleinterview()[pri:0, instance:testCase.Schedule_tc@350aac89]">scheduleinterview</td> 
+  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="e495ff">  <td>23/01/04 09:02:11</td>   <td>23406</td> <td title="&lt;&lt;CommonFunctions.tearDown()[pri:0, instance:testCase.Setting_tc@2d901eb0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
 </table>
