--- a/ViewandHire/test-output/old/ViewandHireProject/toc.html
+++ b/ViewandHire/test-output/old/ViewandHireProject/toc.html
@@ -44,6 +44,14 @@
 </td></tr><p/>
 </table>
 
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>job register validation (0/1/0)</td><td valign='top' align='right'>
+  <a href='job register validation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
 <table width='100%' class='test-passed'>
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Login page validation (1/0/0)</td><td valign='top' align='right'>
@@ -56,14 +64,6 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Setting section validation (5/0/0)</td><td valign='top' align='right'>
   <a href='Setting section validation.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>job register validation (1/0/0)</td><td valign='top' align='right'>
-  <a href='job register validation.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
